# structuralize

./: Cargo.toml  LICENSE
src/: lib.rs  parsing.rs
src/data/: data.rs  mod.rs  parse.rs
src/pattern/: check.rs  data.rs  lazy_matcher.rs  matcher.rs  mod.rs  parse.rs  strict_matcher.rs
