[package]
name = "structuralize"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
renounce = { git = "https://www.github.com/verdex/renounce", version = "0.3.0", tag = "release-0.3.0" }
denest = { git = "https://www.github.com/verdex/denest", version = "0.1.0", tag = "release-0.1.0" }

[dev-dependencies]
intra = { git = "https://www.github.com/verdex/intra", version = "0.1.0", tag = "release-0.1.0" }